trunk/Archive2/22/3073f26cb92457/output
main.cpp:8:36: error: no type named 'index_sequence' in namespace 'std'
auto a2t_impl(const Array& a, std::index_sequence<I...>)
                              ~~~~~^
main.cpp:8:50: error: expected ')'
auto a2t_impl(const Array& a, std::index_sequence<I...>)
                                                 ^
main.cpp:8:14: note: to match this '('
auto a2t_impl(const Array& a, std::index_sequence<I...>)
             ^
main.cpp:14:61: error: no type named 'make_index_sequence' in namespace 'std'
template<typename T, std::size_t N, typename Indices = std::make_index_sequence<N>>
                                                       ~~~~~^
main.cpp:14:80: error: expected ',' or '>' in template-parameter-list
template<typename T, std::size_t N, typename Indices = std::make_index_sequence<N>>
                                                                               ^
main.cpp:14:83: error: expected unqualified-id
template<typename T, std::size_t N, typename Indices = std::make_index_sequence<N>>
                                                                                  ^
5 errors generated.
